[project]
name = "FreeStream"
version = "1.0.1"
description = "An effort to give easy access to generative AI."
authors = [
    {name = "Daethyra", email = "109057945+Daethyra@users.noreply.github.com"},
]
dependencies = [
    "langchain>=0.1.4",
    "streamlit>=1.30.0",
    "unstructured[all-docs]>=0.12.3",
    "sentence-transformers>=2.3.1",
    "langchain-openai>=0.0.5",
    "faiss-cpu>=1.7.4",
    "setuptools>=69.0.3",
]
requires-python = ">=3.11, <3.12"
readme = "README.md"
license = {text = "GNU AGPL"}


[tool.pdm]
distribution = false
