[tool.poetry]

name = "FreeStream"
version = "2.1.0"
description = "Free general purpose generative AI tools."
authors = ["Daethyra <109057945+Daethyra@users.noreply.github.com>"]
readme = "README.md"
license = "GNU AGPL"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

langchain = "^0.1.6"
streamlit = "^1.31.1"
unstructured = {extras = ["all-docs"], version = "^0.12.4"}
sentence-transformers = "^2.3.1"
langchain-openai = "^0.0.5"
faiss-cpu = "^1.7.4"
setuptools = "^69.1.0"
torch = "^2.2.0"
opencv-python-headless = "^4.9.0.80"
numexpr = "^2.9.0"
langchainhub = "^0.1.14"
tavily-python = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
